Footer spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -309,11 +309,11 @@ p {
 .footerMenu {
   float: left;
   padding-left: 100px;
-  padding-top: 20px;
+  padding-top: 10px;
   justify-content: start;
   padding-left: 100px;
   width: 50px;
-  height: 15px;
+  height: 5px;
   margin: 32px 32px 32px 0;
   font-size: 15px;
   font-weight: normal;
@@ -366,9 +366,9 @@ p {
 
 .copyRight{
   text-align: center;
-  padding: 20px;
-  padding-top: 80px;
-  vertical-align: bottom;
+  padding: 10px;
+  padding-top: 10px;
+  vertical-align: top;
   font-size: 12px;
   font-weight: normal;
   font-stretch: normal;
